--- a/index.html
+++ b/index.html
@@ -691,20 +691,12 @@
 
       <main>
         <div id="home" class="page active">
-          <h1>Cybersecurity</h1>
-          <p class="subtitle">By Ritesh Kumar Gupta (URN 2302650)</p>
+          <h1>Core Java</h1>
+          <p class="subtitle">By Neha Mehta (URN 2302625)</p>
           <div id="about-me">
             <h2>About Me</h2>
             <p>
-              I am Ritesh Kumar Gupta, a computer science student at Guru Nanak
-              Dev Engineering College, Ludhiana. My passion lies at the
-              intersection of cybersecurity, algorithms, and information
-              retrieval. This portfolio documents my experience during a
-              comprehensive four-week cybersecurity training at Ansh Infotech,
-              where I developed practical skills and created project like
-              <strong>AudioCrypt</strong>, a tool for audio steganography and
-              encryption. I am eager to apply my skills to solve challenging
-              problems in the tech industry.
+I'm Neha Mehta, a Computer Science student at GNDEC, Ludhiana, with a strong focus on Core Java development. My interest lies in applying object-oriented principles to solve problems in algorithms and data structures. I'm eager to use my foundational Java skills to contribute to challenging roles in the tech industry.
             </p>
           </div>
           <div class="nav-grid">
@@ -808,7 +800,9 @@
             </button>
             <h2 class="page-title">Interactive Training Timeline</h2>
           </div>
-          <div class="timeline-container" id="timeline-items-container"></div>
+          <div class="timeline-container" id="timeline-items-container">
+          
+          </div>
         </div>
 
         <div id="final-report" class="page">
