--- a/index.html
+++ b/index.html
@@ -984,14 +984,9 @@
             <button class="back-button" onclick="showPage('project')">
               Back to Project
             </button>
-            <h2 class="page-title">AudioCrypt Steps</h2>
+          
           </div>
           <div class="content-box">
-            <div class="loader"></div>
-            <iframe
-              src="https://ritesh0x.github.io/Training-102-Report/Steps for AudioCrypt.pdf"
-            ></iframe>
-          </div>
         </div>
         <div id="pdf-modal" class="modal-overlay">
           <div class="modal-content">
@@ -1032,33 +1027,27 @@
 
       <footer>
         <div class="social-links">
+          
           <a
-            href="https://www.linkedin.com/in/ritesh0x/"
-            target="_blank"
-            rel="noopener"
-            title="LinkedIn"
-            ><i class="fab fa-linkedin"></i
-          ></a>
-          <a
-            href="https://github.com/ritesh0x"
+            href="https://github.com/neha-mehta24"
             target="_blank"
             rel="noopener"
             title="GitHub"
             ><i class="fab fa-github"></i
           ></a>
-          <a href="mailto:riteshkumargupta978@gmail.com" title="Email"
+          <a href="mailto:nehamehta24052004@gmail.com" title="Email"
             ><i class="fas fa-envelope"></i
           ></a>
         </div>
         <p>
           <a
-            href="https://github.com/ritesh0x/Training-102-Report"
+            href="https://github.com/neha-mehta24/Training-102-Report"
             target="_blank"
             rel="noopener"
             >Website Source Code</a
           >
         </p>
-        <p>&copy; 2025 Ritesh Kumar Gupta</p>
+        <p>&copy; 2025 Neha Mehta</p>
       </footer>
     </div>
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
@@ -1118,7 +1107,7 @@
 
       function loadPdfInModal(dayNumber) {
         currentDay = dayNumber;
-        const pdfUrl = `https://ritesh0x.github.io/Training-102-Report/Day${currentDay}.pdf`;
+        const pdfUrl = `https://neha-mehta24.github.io/Training-102-Report/Day${currentDay}.pdf`;
         const modalTitle = document.getElementById("modal-title");
         const pdfViewer = document.getElementById("pdf-viewer-modal");
         const contentBox = pdfViewer.parentElement;
