--- a/index.html
+++ b/index.html
@@ -691,20 +691,20 @@
 
       <main>
         <div id="home" class="page active">
-          <h1>Cybersecurity</h1>
-          <p class="subtitle">By Ritesh Kumar Gupta (URN 2302650)</p>
+          <h1>Core Java</h1>
+          <p class="subtitle">By Neha Mehta (URN 2302625)</p>
           <div id="about-me">
             <h2>About Me</h2>
             <p>
-              I am Ritesh Kumar Gupta, a computer science student at Guru Nanak
-              Dev Engineering College, Ludhiana. My passion lies at the
-              intersection of cybersecurity, algorithms, and information
-              retrieval. This portfolio documents my experience during a
-              comprehensive four-week cybersecurity training at Ansh Infotech,
-              where I developed practical skills and created project like
-              <strong>AudioCrypt</strong>, a tool for audio steganography and
-              encryption. I am eager to apply my skills to solve challenging
-              problems in the tech industry.
+I am Ritesh Kumar Gupta, a computer science student at Guru Nanak
+Dev Engineering College, Ludhiana. My passion lies at the
+intersection of **Core Java**, object-oriented programming, and efficient
+data structures. This portfolio documents my experience during a
+comprehensive four-week software development training,
+where I developed practical skills and created projects like
+**JavaConnect**, a utility built for file system management and
+thread synchronization. I am eager to apply my skills to solve challenging
+problems in the tech industry.
             </p>
           </div>
           <div class="nav-grid">
@@ -821,7 +821,7 @@
           <div class="content-box">
             <div class="loader"></div>
             <iframe
-              src="https://ritesh0x.github.io/Training-102-Report/Final Report.pdf"
+              src="https://neha-mehta24.github.io/Training-102-Report/Final Report.pdf"
             ></iframe>
           </div>
         </div>
@@ -852,26 +852,7 @@
                   <img src="TC.jpg" alt="Training Certificate" />
                 </div>
               </details>
-            </div>
-            <div class="cert-column">
-              <details>
-                <summary>Certificate 2: Skill India</summary>
-                <div class="cert-image-container">
-                  <img src="Skill_India.png" alt="Skill India Certificate" />
-                </div>
-              </details>
-            </div>
-            <div class="cert-column">
-              <details>
-                <summary>
-                  Certificate 3: Qualys Vulnerability Management
-                </summary>
-                <div class="cert-image-container">
-                  <img src="qualys.png" alt="Qualys Vulnerability Management" />
-                </div>
-              </details>
-            </div>
-          </div>
+            
         </div>
         <div id="gallery" class="page">
           <div class="page-header">
