--- a/index.html
+++ b/index.html
@@ -685,7 +685,7 @@
           Home
         </button>
         <a href="https://anshinfotech.org/" target="_blank" rel="noopener"
-          ><img src="aitlogo.png" alt="AIT Logo"
+          ><img src="aitlogo.jpg" alt="AIT Logo"
         /></a>
       </header>
 
@@ -696,9 +696,9 @@
           <div id="about-me">
             <h2>About Me</h2>
             <p>
-I am Ritesh Kumar Gupta, a computer science student at Guru Nanak
+I am Neha Mehta, a computer science student at Guru Nanak
 Dev Engineering College, Ludhiana. My passion lies at the
-intersection of **Core Java**, object-oriented programming, and efficient
+intersection of Core Java, object-oriented programming, and efficient
 data structures. This portfolio documents my experience during a
 comprehensive four-week software development training,
 where I developed practical skills and created projects like
@@ -871,11 +871,7 @@ problems in the tech industry.
             <h2 class="page-title">Project</h2>
           </div>
           <div class="project-details">
-            <h3>AudioCrypt Project</h3>
-            <p>
-              A secure audio steganography tool to hide encrypted messages
-              within audio files using AES-256 and LSB techniques.
-            </p>
+        
             <!-- <div class="video-container">
               <iframe
                 src="https://www.youtube.com/embed/43s2JZ8JqiY"
@@ -886,30 +882,7 @@ problems in the tech industry.
                 allowfullscreen
               ></iframe>
             </div> -->
-            <div
-              class="video-thumbnail"
-              onclick="openVideoModal('43s2JZ8JqiY')"
-            >
-              <img
-                src="https://img.youtube.com/vi/43s2JZ8JqiY/hqdefault.jpg"
-                alt="AudioCrypt Project Video Thumbnail"
-              />
-              <div class="play-icon"><i class="fas fa-play"></i></div>
-            </div>
-
-            <!-- <div id="video-modal" class="modal-overlay">
-              <div class="video-modal-content">
-                <button id="video-modal-close-btn" class="close-button">
-                  &times;
-                </button>
-                <div class="video-container" id="video-modal-container"></div>
-                <div class="modal-footer">
-                  <button class="back-button" onclick="closeVideoModal()">
-                    Back to Project
-                  </button>
-                </div>
-              </div>
-            </div> -->
+        
             <div id="video-modal" class="modal-overlay">
               <div class="video-modal-content">
                 <!-- <div class="modal-header">
