--- a/index.html
+++ b/index.html
@@ -943,10 +943,14 @@ A Hospital Management System developed using Java Swing and MySQL.
                 class="nav-button"
                 >GitHub Repo</a
               >
-                <div class="project-buttons">
-                    <a href="TheG_Connects/index.html" target="_blank" rel="noopener noreferrer" class="project-button"><i class="fas fa-play-circle"></i> View Live</a>
-                    <a href="https://github.com/pankajxg/Training-102-Report/tree/main/TheG_Connects" target="_blank" rel="noopener noreferrer" class="project-button"><i class="fab fa-github"></i> Source Code</a>
+               <button class="nav-button">
+                 <div class="project-buttons">
+                    <a href="E_med/web/index.html" target="_blank" rel="noopener noreferrer" class="project-button"><i class="fas fa-play-circle"></i> View Live</a>
+
+
                 </div>
+               </button>
+
 
 
               
