--- a/index.html
+++ b/index.html
@@ -1045,7 +1045,7 @@ A Hospital Management System developed using Java Swing and MySQL.
             >Website Source Code</a
           >
         </p>
-        <p>&copy; 2025 Ritesh Kumar Gupta</p>
+        <p>&copy; 2025 Neha Mehta</p>
       </footer>
     </div>
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
